# htaub-cli

./: .gitignore  CLAUDE.md  LICENSE  README.md  ihcm_auth.py  ihcm_extractor.py  leave_request_processor.py  payslip_sync.py  people_home_extractor.py  pyproject.toml
notes/: AUTH_NOTES.md  claude-chrome-decomposition.txt  people-home-claude-chrome-decomp-pagination.txt  people-home-claude-chrome-decomp.txt  people-home-claude-crhome-decomp-additional.txt
