[project]
name = "htaub-cli"
version = "0.1.0"
description = "CLI automation for ADP iHCM: employee data extraction, leave requests, and payslip sync"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "playwright>=1.40.0",
    "playwright-stealth>=1.0.6",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_ignores = true
disallow_untyped_defs = false
check_untyped_defs = false
ignore_missing_imports = true
no_implicit_optional = false
disable_error_code = ["import-untyped"]
